# cxxmath

./: CMakeLists.txt  README.md  cxxmath-config.cmake  cxxmath.hpp
concepts/: boolean_lattice.hpp  comparable.hpp  decomposable_r_module.hpp  group.hpp  logical.hpp  mapping_prescription.hpp  monoid.hpp  monoid_fwd.hpp  product.hpp  r_algebra.hpp  r_module.hpp  ring.hpp  set.hpp  total_order.hpp  tree.hpp  variant.hpp
core/: concepts.hpp  dispatch_tags.hpp  function_dispatch.hpp  is_range.hpp  is_valid.hpp  make.hpp  operator_helpers.hpp  operator_helpers_fwd.hpp
helpers/: boolean_v.hpp  boost_variant.hpp  erase_if.hpp  has_member_type.hpp  is_range.hpp  is_std_variant.hpp  parameter_packs.hpp  std_array.hpp  std_variant.hpp  unpack_template.hpp  wrap_template_members.hpp
models/: abstract_index_notation.hpp  bool.hpp  boost_variant.hpp  clifford_algebra.hpp  free_monoid.hpp  free_r_algebra.hpp  function_object.hpp  function_object_fwd.hpp  int.hpp  polynomial.hpp  product_comparable.hpp  product_monoid.hpp  product_set.hpp  quotient_r_algebra.hpp  std_get.hpp  std_pair.hpp  std_string_view.hpp  std_vector.hpp  typesafe_tree.hpp
support/: tree.hpp
test/: CMakeLists.txt  bool.cpp  clifford.cpp  free_r_algebra.cpp  int.cpp  mapping_prescription.cpp  polynomial.cpp  product_comparable.cpp  product_monoid.cpp  product_set.cpp  std_pair.cpp  std_vector.cpp  tree.cpp  variant.cpp
